<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xc9-fk-GMt">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Image references" minToolsVersion="12.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="collection view cell content view" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="NasaExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fNJ-jJ-LU8">
                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DOL-bx-fUA">
                                    <size key="itemSize" width="128" height="128"/>
                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <cells>
                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="7OJ-P2-Q69">
                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="0zD-xh-OYg">
                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </collectionViewCellContentView>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W2n-pq-5dA">
                                <rect key="frame" x="0.0" y="88" width="414" height="41"/>
                                <subviews>
                                    <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M7u-Y9-kOC">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZuF-Gv-ZPc">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                        </view>
                                        <blurEffect style="dark"/>
                                    </visualEffectView>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="buO-0M-uHm">
                                        <rect key="frame" x="24" y="6" width="293" height="32"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <segments>
                                            <segment title="Curiosity"/>
                                            <segment title="Opportunity"/>
                                            <segment title="Spirit"/>
                                        </segments>
                                        <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <action selector="segmentControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="Sm3-JA-0Qe"/>
                                        </connections>
                                    </segmentedControl>
                                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pks-u7-hdB">
                                        <rect key="frame" x="346" y="10" width="60" height="22"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Filter">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <imageReference key="image" image="dot.square" catalog="system" symbolScale="default"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6S2-Mp-xHd"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="Pks-u7-hdB" firstAttribute="top" secondItem="W2n-pq-5dA" secondAttribute="top" constant="10" id="3Ls-gU-Xqj"/>
                                    <constraint firstItem="buO-0M-uHm" firstAttribute="leading" secondItem="W2n-pq-5dA" secondAttribute="leading" constant="24" id="7d6-L3-gZK"/>
                                    <constraint firstAttribute="bottom" secondItem="Pks-u7-hdB" secondAttribute="bottom" constant="9" id="9eE-NS-bkD"/>
                                    <constraint firstItem="buO-0M-uHm" firstAttribute="top" secondItem="W2n-pq-5dA" secondAttribute="top" constant="6" id="RIU-LI-bUs"/>
                                    <constraint firstAttribute="trailing" secondItem="Pks-u7-hdB" secondAttribute="trailing" constant="8" id="Vh1-R9-9tp"/>
                                    <constraint firstAttribute="bottom" secondItem="buO-0M-uHm" secondAttribute="bottom" constant="4" id="jIK-aw-eCE"/>
                                    <constraint firstItem="Pks-u7-hdB" firstAttribute="leading" secondItem="buO-0M-uHm" secondAttribute="trailing" constant="29" id="r29-pE-e7E"/>
                                </constraints>
                            </view>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="0.054901960784313725" green="0.11764705882352941" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="fNJ-jJ-LU8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3cB-dU-V7L"/>
                            <constraint firstAttribute="bottom" secondItem="fNJ-jJ-LU8" secondAttribute="bottom" id="KmA-6u-Luw"/>
                            <constraint firstItem="W2n-pq-5dA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RKG-M4-Y5k"/>
                            <constraint firstItem="fNJ-jJ-LU8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Uho-SR-Viy"/>
                            <constraint firstItem="W2n-pq-5dA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="c0I-QV-Dvs"/>
                            <constraint firstItem="W2n-pq-5dA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tWP-A1-yph"/>
                            <constraint firstItem="fNJ-jJ-LU8" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wh4-fO-tRo"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="wOU-dj-w42"/>
                    <connections>
                        <outlet property="buttonFilter" destination="Pks-u7-hdB" id="0sf-UV-xAm"/>
                        <outlet property="collectionView" destination="fNJ-jJ-LU8" id="Zs3-5F-qvE"/>
                        <outlet property="segmentView" destination="W2n-pq-5dA" id="WDU-NA-Tjh"/>
                        <outlet property="segmentedControl" destination="buO-0M-uHm" id="EtI-if-Ga6"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="340.57971014492756" y="93.75"/>
        </scene>
        <!--Base Navigation Controller-->
        <scene sceneID="y8F-7c-pHo">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xc9-fk-GMt" customClass="BaseNavigationController" customModule="NasaExample" customModuleProvider="target" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LtF-Sb-lDW">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gA0-4F-2xc"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Lu8-ri-5hd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-361" y="94"/>
        </scene>
    </scenes>
    <resources>
        <image name="dot.square" catalog="system" width="128" height="114"/>
    </resources>
</document>
