...
        }
        
        let miniTesction = UIAlertAction(title: "MINITES - Miniature Thermal Emission Spectrometer (Mini-TES)", style: .default) { (action: UIAlertAction) in
            self.setFilter(filterName: "MINITES")
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        
        alertController.addAction(allAction)
        alertController.addAction(fhazAction)
        alertController.addAction(rhazAction)
        alertController.addAction(mastAction)
        alertController.addAction(chemCamAction)
...
